[gd_scene load_steps=2 format=2]

[ext_resource path="res://Battle/AttackBox/AttackBox.gd" type="Script" id=1]

[node name="AttackBox" type="Control"]
margin_right = 1440.0
margin_bottom = 270.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 1 )

[node name="HitArea" type="ColorRect" parent="."]
margin_left = 200.0
margin_right = 400.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( -2494, -358 )
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="HitArea2" type="ColorRect" parent="."]
margin_left = 600.0
margin_right = 800.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( -2494, -358 )
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="HitArea3" type="ColorRect" parent="."]
margin_left = 1000.0
margin_right = 1200.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( -2494, -358 )
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="TargetHitArea" type="ColorRect" parent="."]
margin_left = 257.5
margin_right = 332.5
margin_bottom = 270.0
rect_pivot_offset = Vector2( -2494, -358 )
color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="TargetHitArea2" type="ColorRect" parent="."]
margin_left = 657.5
margin_right = 732.5
margin_bottom = 270.0
rect_pivot_offset = Vector2( -2494, -358 )
color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="TargetHitArea3" type="ColorRect" parent="."]
margin_left = 1057.5
margin_right = 1132.5
margin_bottom = 270.0
rect_pivot_offset = Vector2( -2494, -358 )
color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_right = 1440.0
margin_bottom = 270.0
border_color = Color( 1, 1, 1, 1 )
border_width = 20.0

[node name="Weapon" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 270.0
